# nemoguardian

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  NOTICE  README.md  SUBMISSION.md  docker-compose.yml  pyproject.toml
data/: benchmark.jsonl
demo/: console_demo.py  index.html
docs/: 3090_OPERATOR_GUIDE.md  BOT_RUNBOOK.md  COMMUNITY_TEMPLATE_GUIDE.md  JUDGE_GUIDE.md  LIVE_TEST_STRATEGY.md  MODEL_CATALOG.md  PLATFORM_COVERAGE.md  PRE_SUBMIT_CHECKLIST.md  QUANTIZATION_MATRIX.md  STRIPE_GPU_CREDITS.md  SUBMISSION_FORM.md  THIRD_PARTY_MODELS.md  VASTAI_DEMO_RUNBOOK.md  VIDEO_SCRIPT.md  evidence.json  index.html  privacy.html  refund.html  terms.html
nemoguardian/: __init__.py  __main__.py  aggregator.py  cascade.py  cli.py  detectors.py  mcp_server.py  middleware.py  ops_cli.py  profiles.py  profiles_cli.py  schemas.py  server.py
scripts/: build_check.py  check_doc_links.py  demo_host_check.py  discord_actor_scenario.py  discord_live_smoke.py  eval_benchmark.py  eval_report.py  final_submission_check.py  framework_smoke.py  platform_smoke.py  pre_submit_local.py  real_model_smoke.py  secret_scan.py  setup_discord_live_env.sh  sweep_thresholds.py  triage_api_smoke.py
tests/: conftest.py  test_adapters.py  test_adapters_base.py  test_aggregator.py  test_api.py  test_api_hardening.py  test_audit.py  test_bot_engine.py  test_cascade.py  test_ci_tooling.py  test_cli.py  test_config.py  test_coverage_gaps.py  test_detectors.py  test_eval.py  test_eval_adversarial.py  test_eval_corpus.py  test_eval_metrics_cost.py  test_eval_report.py  test_matrix_adapter.py  test_mcp_server.py  test_models.py  test_ops_cli.py  test_platform_smoke.py  test_policy.py  test_positioning.py  test_profiles.py  test_reddit_adapter.py  test_review.py  test_review_cli.py  test_schemas.py  test_sweep.py  (+6 more)
(+61 files in other folders)
