[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemoguardian"
version = "0.1.0"
description = "Multi-model LLM moderation cascade (Nemotron + Qwen3Guard). Hackathon project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Carlos" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "httpx>=0.27",
  "openai>=1.0",
  "pyyaml>=6.0",
  "stripe>=8.0",
  "transformers>=4.51.0",
  "torch>=2.2",
  "accelerate>=0.27",
  "bitsandbytes>=0.43",
  "tenacity>=8.2",
  "structlog>=24.1",
  "typer>=0.12",
  "numpy>=1.26",
]

[project.optional-dependencies]
discord = ["discord.py>=2.3"]
twitch = ["twitchio>=2.10"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.3",
  "mypy>=1.8",
]
gpu = ["vllm>=0.4.6.post1"]

[project.scripts]
nemoguardian = "nemoguardian.cli:main"

[project.urls]
Homepage = "https://github.com/claudlos/nemoguardian"

[tool.setuptools.packages.find]
where = ["."]
include = ["nemoguardian*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
